# hello-world

./: .classpath  .gitignore  .gitmodules  .project
Java/: HelloJava.java
Java/Inherit/: .gitignore  A.java  C.java  D.java  Main.java
Java/Jackson/: pom.xml
Java/Jackson/rsc/: data_in.json  data_in_array.json
Java/JavaHttp/: .project
Java/JavaJdbcHello/: .project  build.xml  pom.xml
Java/JavaJdbcHello/nbproject/: build-impl.xml  project.properties
Java/JavaNetBeansHello/: build.xml
Java/JavaNetBeansHello/nbproject/: build-impl.xml
Java/JavaTest/: .classpath  pom.xml
Java/JavaTest/src/: JacksonTest.java  JavaTest.java  MyValue.java
Java/javatest/: .classpath  pom.xml
Java/javatest/src/: JavaTest.java
JavaHttp/: JavaHttp.java  README.txt
JavaJdbcHello/nbproject/: genfiles.properties  project.xml
JavaNetBeansHello/: run.sh
JavaNetBeansHello/nbproject/: genfiles.properties  project.properties  project.xml
Linux/clouds_module/: Makefile  clouds_module.c
Linux/device_tree/: hello_module.c
Linux/frame_buffer/: fb_test.c
Linux/ftrace/: mypoint.h
Linux/kernel_module/: Makefile  hello_module.c  tool_envsetup.sh
Linux/kernel_module_ubuntu/: Makefile  build-symbol-ubuntu-ko.sh  hello_module.c
Python/python_helloworld/: .project  .pydevproject
Python/python_helloworld/beautifulsoup_test/: beautifulsoup_test.py
Python/python_helloworld/helloworld/: helloworld.py
Python/python_helloworld/rpy2test/: __init__.py
R/r_helloworld/: .project  helloworld.R
T32CMM/: MAIN_attach_eos_A9.cmm  load_vmlinux.cmm  menu_linux.cmm
algorithm/: quick_sort.py
algorithm/cracking_the_coding_interview_5/arrays_and_strings/: arrays_and_strings.py
algorithm/cracking_the_coding_interview_5/linked_lists/: linked_lists.py
algorithm/cracking_the_coding_interview_5/python/: bit_manipulation.py  mathematics_and_probability.py  object-oriented_design.py  recursion_and_dynamic_programming.py  sorting-and-searching.py  trees_and_graphs.py
algorithm/cracking_the_coding_interview_5/stacks_and_queues/: stacks_and_queues.py
algorithm/cracking_the_coding_interview_5/trees_and_graphs/: trees_and_graphs.py
android/systrace/: systrace_sample.c
bat/: bat_function.bat
c/hello_test/: .cproject
c/hello_test/src/: hello_test.c
c/preprocessor_test/: .cproject
c/preprocessor_test/src/: preprocessor_test.c
c/show_macro_def/: .cproject
c/show_macro_def/src/: show_macro_def.c
cmake/cmake_template/basic/: CMakeLists.txt  main.c
cmake/cmake_template/cross_compiler/: CMakeLists.txt
cmake/cmake_template/ctest/: CMakeLists.txt  test2.c
cmake/cmake_template/ctest/sub_src/: CMakeLists.txt
cmake/cmake_template/src/: CMakeLists.txt
cmake/cmake_test/: CMakeLists.txt  Memo.txt
cmake/cmake_test/cmake/: util.cmake
cmake/cmake_test/demo_app/: CMakeLists.txt  main_app.c
cmake/cmake_test/lib_rtos/: CMakeLists.txt  link_script_1.ld  rtos_lib.c
cmake/cmake_test/sdk_rtos/: CMakeLists.txt  rtos_lib.c
cmake/variable_test/: CMakeLists.txt
commands/diff_patch/1.SRC_dir/: create_patch.bat
commands/diff_patch/2.USER_dir/: apply_patch.bat  diff.patch
drakon/: state_machine.cpp  state_machine.drn  state_machine.h
google_test/: README.txt
google_test/gtest_sample/: CMakeLists.txt  main.cpp
graphviz/: chinese.dot  finite_state_machine.dot  graphviz_test.dot
java/Inherit/: A.java  B.java  I.java  Main.java
java/Jackson/: pom.xml
java/Jackson/rsc/: data_in_map.json
java/JavaHttp/: README.txt
java/JavaJdbcHello/src/: JavaJdbcHello.java
java/JavaTest/: .classpath  pom.xml
javascript/hello-html/WebContent/: hello-html.js  index.html
linux/clouds_module/: Makefile
linux/device_node/: debugfs_sample.c  miscdevice_sample.c
linux/device_tree/: Makefile
linux/ftrace/: atrace_kernel_version.c
linux/ftrace/ftrace_event_sample/: sample_events.c  sample_events.h
linux/ftrace/ftrace_ko_sample/: Makefile  tool_envsetup.sh
linux/ftrace/sample1/: Makefile  ftrace_test.c  tool_envsetup.sh
linux/hrtimer/: hrtimer_sample.c
linux/kernel_module/: hello_module.c
linux/list/: list.c
logo/: test.lgo
markdown/: _another link file.md  latis-math.md  markdown_sample-math.md  markdown_sample.md  markdown_test.md
pine/: my_pine.c
python/: argparse_test.py  command_line.py  data_model_test.py  decorator_sample.py  docstrings_sample.py  exception_sample.py  helloworld.py  importlib_test.py  logging_sample.py  map_sample.py  namedtuple_test.py  queue_sample.py  reg_expressions.py  regular_expressions.py  variable_number_arguments.py
python/PACKAGE_SAMPLE/: argparse_test.py  command_line.ipynb  queue_sample.py  random_test.py  regular_expressions.py  scipy_test.py
python/PATTERN_SAMPLE/: _template_.py  data_model_test.py  sort_sample.py  variable_number_arguments.py
python/configparser_sample/: configparser_sample.py
python/cython/: hello_cython.c  hello_cython.pyd  main_cython.py
python/file-process/: big-file.py
python/google-api/: google_sheet_quickstart_sample.py
python/graphviz/: output_python_gen_dot.filewrite.dot  python_gen_dot.py
python/json/: json_sample.py  sample-save.json
python/jupyter/: xlwings.ipynb
python/lldb-python-script-sample/: .cproject
python/matplotlib/: eventplot_sample.py  patches_sample.py  table_sample.py  table_samples.ipynb
python/multi-thread/: multiprocess_test.py  multithread_test.py
python/python_helloworld/: namedtuple_test.py  scipy_test.py
python/sympy/: solver.py
python/tkinter-sample/: tkinter_test.py
python/unicode/: chardet_test.py  encode_decode-2.py  encode_decode.py  open_unicode_file.py
python3/tensorflow/: hello.py
shellscript/: snippet.sh
t32cmm/: cmm_command_sample.cmm  load_linux_symbol.cmm  menu_linux.cmm
unicode/files/: 0.README.txt  big-5.txt  ucs-2_le_bom.txt  utf-8.txt
unicode/win_c_unicode/: CMakeLists.txt  fopen_test.cpp  print_test.cpp
windows/pipe/anonymous_pipe/: CMakeLists.txt  child.cpp  main.cpp
windows/win_entry/: CMakeLists.txt  main.cpp  wmain.cpp
windows/winsock/: .cproject  CMakeLists.txt  client.cpp  server.cpp
(+120 files in other folders)
